[package]
name = "game-termination-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-compression = { version = "0.4.6", features = ["tokio", "zstd", "futures-io"] }
clap = { version = "4.5.3", features = ["derive"] }
futures = "0.3.30"
pgn-reader = "0.25.0"
reqwest = { version = "0.12.0", features = ["stream"] }
ringbuffer = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shakmaty = "0.26.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zstd = "0.13.0"
